Prevent <object> elements from stretching page

--- a/static/less/dash.less
+++ b/static/less/dash.less
@@ -1126,6 +1126,11 @@ img {
     .body iframe,
     .caption iframe,
     .description iframe,
+    .post.video > object,
+    .audiobox > object,
+    .body object,
+    .caption object,
+    .description object,
     .meta {
         width: 100% !important;
     }
